# zigbee_smart_switch

./: .gitignore  CMakeLists.txt  Makefile  README.md  button.c  main.c  nrf52840.ld  pwm.c  relay.c  sdk_config.h  storage.c  zigbee.c
hex/: nrf52840_xxaa.hex
include/: button.h  custom_board.h  pwm.h  relay.h  storage.h  zigbee.h
